cholera 0.5.1.9045
==================

- add landmarks to type = "case-pump" in walkingDistance() and walkingPath().


cholera 0.5.1.9044
==================

- add new landmarks and orthoProjLandmarks() prototypes.


cholera 0.5.1.9043
==================

- fix title in euclideanPath(type = "case-pump").
- fix destination label for walkingPath(destination = NULL).


cholera 0.5.1.9042
==================

- add new euclideanDistance(), euclideanPath() and walkingPath() prototypes.


cholera 0.5.1.9041
==================

- amend "<" to "<=" in walkingPath().


cholera 0.5.1.9040
==================

- test amended landmarks and orthoProjLandmarks().
- fix walkingPath() landmark destinations.


cholera 0.5.1.9039
==================

- add new walkingDistance() and walkingPath() prototypes.


cholera 0.5.1.9038
==================

- consolidate neighborhoodData().
- add walkingDistance() and walkingPath() prototypes.


cholera 0.5.1.9037
==================

- ortho.proj.landmarks -> landmarks.
- landmarks() -> orthoProjLandmarks().
- add draft sources/bibliography vignette.


cholera 0.5.1.9036
==================

- set embed.landmarks = TRUE in neighborhoodData().


cholera 0.5.1.9035
==================

- fix negative selection in addNeighborhoodWalking().


cholera 0.5.1.9034
==================

- add token argument to streetNameLocator () and streetNumberLocator().


cholera 0.5.1.9033
==================

- re-enable "snow" neighborhood.


cholera 0.5.1.9032
==================

- revert profile2D() and profile3D() to non-S3 implementation.


cholera 0.5.1.9031
==================

- add new neighborhoodData() prototype.
- fix pumpTokens().
- add case.col argument to snowMap().


cholera 0.5.1.9030
==================

- add type = "expected" to addNeighborhoodCases().


cholera 0.5.1.9029
==================

- landmarkData() -> landmarks() (prototype).
- add ortho.proj.landmarks (prototype).
- add ortho.proj.landmarks$case (pseudo case #).


cholera 0.5.1.9028